# BETH

./: Installationsanleitung.md  README.md
BETH/: platformio.ini
BETH/include/: audio.h  communication.h  config.h  sensor.h
BETH/src/submodules/: power.cpp
Code/BETH/include/: debug.h  led.h  power.h
Code/BETH/src/: main.cpp
Code/BETH/src/submodules/: audio.cpp  communication.cpp  led.cpp  sensor.cpp
Code/rasberrypi/: .env.example  main.py  requirements.txt  test_client.py
Code/rasberrypi/connection/: server.py
Code/rasberrypi/games/: satellite.py
Code/rasberrypi/gui/: __init__.py  mainMenu.py  mainWindow.py  selectGameWindow.py  speedGameWindow.py  widgets.py
Modelle/EnergieversorgungsPlatine/: LeiterplatteEnergieversorgung.brd
Modelle/Gehaeuese/: LED.ipt  LED3D.stl  Oberteil.ipt  Stuetze.ipt  Stuetze3D.stl  Unterteil.ipt
Modelle/LEDPlatine/: StromlaufplanLED.sch
ModelleFusion360/AudioPlatine/: Audio.brd  Audio.sch  MainPCB.ipt
ModelleFusion360/EnergieversorgungsPlatine/: BatteryCharger.sch
ModelleFusion360/LEDPlatine/: Leiterplatte.fbrd  Leiterplatte_LED_Gruppe_fertig.brd  Stromlaufplan.fsch
rasberrypi/: .gitignore  pyproject.toml
rasberrypi/connection/: satellite_connection.py
rasberrypi/games/: __init__.py  badminton_training.py  commands.md
rasberrypi/gui/: connectWindow.py  consts.py  debugWIndow.py  logsWindow.py  styles
rasberrypi/utils/: config.py  helpers.py
